--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Tropical Trains</title>
+
+    <!-- le styles -->
+    <link rel="stylesheet" href="css/master.css" charset="utf-8" />
+
+    <!-- d3 include -->
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <style>
-      .link {
-        stroke: #999;
-        stroke-opacity: .6;
-      }
-      .node {
-        stroke: black;
-        fill: red;
-        stroke-width: 1.5px;
-      }
-    </style>
   </head>
   <body>
   </body>
