--- a/public/index2.html
+++ b/public/index2.html
@@ -64,6 +64,7 @@
         iconUrl: "person-dress-solid.svg",
         iconSize: [20, 20 * 1.6],
         iconAnchor: [10, 30],
+        popupAnchor: [0, -32],
       });
 
       agents.forEach((agent) => {
